Fri Jun 29 19:47:18 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/QueryCondition/QueryConditionTest.cpp:

          Fixed memory management of a string value in the test.

Fri Jun 29 17:04:21 UTC 2012  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/RTPS/Spdp.h:
        * dds/DCPS/RTPS/Spdp.cpp:

          Modify the Spdp implementation to send participant announcements whenever
          a new participant is discovered.  This should reduce discovery time
          with RTPS, especially when the default value of ResendPeriod=30 is used.

        * tests/DCPS/Deadline/run_test.pl:
        * tests/DCPS/Deadline/subscriber.cpp:

          Clean up the perl script and change the subscriber to use a status
          condition instead of a sleep.  The sleep period was not long enough
          for RTPS discovery.

        * tests/DCPS/Messenger/rtps_disc.ini:

          Remove ResendPeriod=30 from this test as it is no longer needed.

Fri Jun 29 16:14:55 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/RTPS/RtpsDiscovery.cpp:

          In remove_domain_participant() don't delete
          participant until lock has been released.

Thu Jun 28 20:08:57 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DdsDcps.mpc:

          Added back server-side header files for local IDL
          interfaces so that "make install" will still work.

Thu Jun 28 16:37:53 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DdsDcps.mpc:

          When compiling OpenDDS_Dcps library's local IDL interfaces,
          suppress generation of server-side source.

        * DevGuideExamples/DCPS/Messenger/DataReaderListenerImpl.h:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/DataReaderListenerImpl.h:
        * dds/DCPS/BitPubListenerImpl.h:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DomainParticipantFactoryImpl.h:
        * dds/DCPS/EntityImpl.h:
        * dds/DCPS/Registered_Data_Types.h: